<resources>
    <string name="app_name">KLCCalculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>


    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="divide">÷</string>
    <string name="percentage">%</string>
    <string name="plus_minus">+/-</string>
    <string name="clear">C</string>
    <string name="allclear">AC</string>


    <string name="equal">=</string>
    <string name="decimal">.</string>


    <!--one,two,three,four,five,six,seven,eight,nine,zero,plus,minus,multiply,divide,percentage,plus_minus,clear,equal,decimal-->

    <string name="hello">Hello World, Default!</string>


    <string name="result_default">0</string>

    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMutiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonClear">C</string>
    <string name="buttonResult">=</string>

    <string name="buttonZero">0</string>

    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>


    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>

    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>

</resources>
